--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.ActivityToday"
         tools:targetApi="31">
         <activity
-            android:name=".PizzaMain"
+            android:name=".MenuBar"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,21 +21,24 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".PizzaMain"
+            android:exported="false"/>
+
+        <activity
             android:name=".MainFrag"
             android:exported="false" />
         <activity
             android:name=".ListActivity1"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ThirdActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".SecondActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
